<resources>
    <string name="app_name">The Sahabas</string>
    <string name="sahaba_name">Nama Sahabat</string>
    <string name="sahaba_details">Detail Sahabat</string>
    <string name="menu_about">About</string>
    <string name="menu_call_me">Call Me</string>
    <string name="menu_share">Share this App</string>
    <string name="sahaba_categories">Sahabat yang dijamin masuk surga</string>
    <string name="dev_name">Daniel Saputra</string>
    <string name="dev_mail">danielwetan.io@gmail.com</string>
    <string name="dev_github">github.com/danielwetan</string>
    <string name="email_text">Email</string>
    <string name="name_text">Name</string>
    <string name="github_text">Github</string>
    <string name="copyright_text">Copyright 2020</string>
</resources>
